--- a/style.css
+++ b/style.css
@@ -4,18 +4,27 @@
   align-items: center;
 }
 #bg-vid{
+  display: flex;
   position: fix;
   right: 0;
   bottom: 0;
-  min-width: 100vw;
-  min-height: 100vh;
-  z-index: 0; 
+  min-width: 50vw;
+  min-height: 50vh;
+  z-index: 0;
+  /* margin-top: -10.5%;
+  margin-bottom: -10.5%;
+  margin-left: -25%;
+  margin-right: -25%; */
+  overflow: hidden;
+  display: block; 
 }
 .login-box{
   flex-direction: column;
   display:flex;
-  height: 50vh;
-  width: 50vh;
+  position: relative;
+  left: -50%;
+  height: 60vh;
+  width: 150vw;
   align-self: center;
   align-items: center;
   justify-content: center;
@@ -42,19 +51,18 @@
   border: 5px solid black;
 }
 #login-button{
-  position: relative;
-  background: url("https://static.wikia.nocookie.net/kausers/images/d/d2/Donotpress.PNG/revision/latest?cb=20150801160708");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  background-position-y: -.75em;
+  background-color: rgb(124, 30, 30);
   border: thick solid black;
-  background-origin: border-box;
-  font-weight: bold;
+  font-size: 30px;
+  
+  color: whitesmoke;
+  font-family:Impact, Haettenschweiler, 'Arial Bold', sans-serif;
   padding: 10px;
   border-radius: 100%;
-  height: 15em;
-  width: 15em;
+  width: 8em;
+  height: 8em;
+  z-index:2;
+  
   
 }
 h1{
