--- a/style.css
+++ b/style.css
@@ -1,73 +1,80 @@
 .container-fluid{
   display: flex;
   justify-content: center;
-  align-items: center;
+  min-width: 100vw;
+  min-height: 100vh;
+  align-content: center;
+  
 }
 #bg-vid{
-  display: flex;
-  position: fix;
-  right: 0;
-  bottom: 0;
-  min-width: 50vw;
-  min-height: 50vh;
+  position: fixed;
+  min-width: 100vw;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
   z-index: 0;
-  /* margin-top: -10.5%;
-  margin-bottom: -10.5%;
-  margin-left: -25%;
-  margin-right: -25%; */
   overflow: hidden;
-  display: block; 
 }
+
 .login-box{
   flex-direction: column;
   display:flex;
-  position: relative;
-  left: -50%;
-  height: 60vh;
-  width: 150vw;
+  height: 300px;
+  width: 300px;
+  overflow: hidden;
   align-self: center;
   align-items: center;
   justify-content: center;
   background-image: url("https://img.freepik.com/free-vector/black-yellow-stripes-warning-background_1017-37397.jpg?w=1380&t=st=1676582413~exp=1676583013~hmac=dbf29edbeaf68fd05b98fb42283f0cc54825777797216a3e1599549d78b0b935");
-  background-size: 414px 450px;
+  background-size: 100vh 100vh;
   background-repeat: no-repeat;
   background-position: center;
-  max-width: 414px;
-  min-height: 276px;
-  max-height: 450px;
+  min-height: 350px;
+  min-width: 350px;
   border-radius: 10%;
   box-shadow: -5px 21px 139px 4px rgba(0,0,0,0.75);
   z-index: 1;
-
+  border-style: solid;
+  border-color: black;
+  border-width: 5px;
 }
+
 #username{
   margin-top: 15px;
   border-radius: 5px;
   border: 5px solid black;
 }
+
 #password{
   margin-top: 5px;
   border-radius: 5px;
   border: 5px solid black;
 }
+
 #login-button{
   background-color: rgb(124, 30, 30);
   border: thick solid black;
   font-size: 30px;
   
-  color: whitesmoke;
+  color: ghostwhite;
   font-family:Impact, Haettenschweiler, 'Arial Bold', sans-serif;
   padding: 10px;
   border-radius: 100%;
   width: 8em;
   height: 8em;
   z-index:2;
-  
-  
 }
+
 h1{
   color: ghostwhite;
   font-size: 5em;
   font-weight: bold;
   margin-top: 1.5em;
+}
+
+@media (any-hover:hover) {
+  #username:hover, #password:hover{
+    background-color: rgb(124, 30, 30);
+  }
 }
